plugins {
  id 'org.springframework.boot' version '2.5.2'
  id 'io.spring.dependency-management' version '1.0.11.RELEASE'
  id 'java'
}

allprojects {
  apply plugin: 'org.springframework.boot'
  apply plugin: 'io.spring.dependency-management'
  apply plugin: 'java'

  group = 'io.devfactory'
  version = '0.0.1'
  sourceCompatibility = JavaVersion.VERSION_16
  targetCompatibility = JavaVersion.VERSION_16

  repositories {
    mavenCentral()
  }

  configurations {
    compileOnly {
      extendsFrom annotationProcessor
    }
  }

  dependencies {
    developmentOnly 'org.springframework.boot:spring-boot-devtools'

    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'

    testCompileOnly 'org.projectlombok:lombok'
    testAnnotationProcessor 'org.projectlombok:lombok'

    testImplementation 'org.springframework.boot:spring-boot-starter-test'
  }

  test {
    useJUnitPlatform()
  }
}

subprojects {
  dependencies {
    implementation 'com.github.gavlyukovskiy:p6spy-spring-boot-starter:1.6.1'
    implementation 'org.apache.commons:commons-lang3:3.10'
  }
}

project(':server-batch') {
  dependencies {
    implementation project(':common')
  }
}

project(':server-rest') {
  dependencies {
    implementation project(':common')
  }
}

project(':server-web') {
  dependencies {
    implementation project(':common')
  }
}
